// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AppLayout /> snapshots renders correctly with CMS: background wrapper 1`] = `
<div
  class="flex min-h-screen flex-col items-center tablet:[background:var(--cms-bg)]"
  data-testid="app"
  style="--cms-bg: linear-gradient(135deg, rgba(255, 255, 255, 0.7) 0%, rgba(255, 26, 26, 0.25) 40%, rgba(230, 0, 0, 0.3) 70%, rgba(179, 0, 0, 0.45) 100%);"
/>
`;

exports[`<AppLayout /> snapshots renders correctly with CMS: header background 1`] = `
<header
  class="w-full px-6 py-4 mobileLandscape:py-6 tablet:[background:var(--cms-header-bg)]"
  style="--cms-header-bg: linear-gradient(135deg, #764ba2 0%, #667eea 100%);"
/>
`;

exports[`<AppLayout /> snapshots renders correctly with CMS: header logo 1`] = `
<img
  alt="custom-header-logo"
  class="h-auto w-[140px] mx-0"
  src="https://cdn.accounts.firefox.com/other/firefox-browser-logo.svg"
/>
`;

exports[`<AppLayout /> snapshots renders correctly with CMS: title 1`] = `"MOCK Shared Title | Mozilla accounts"`;

exports[`<AppLayout /> snapshots renders correctly without CMS: background wrapper 1`] = `
<div
  class="flex min-h-screen flex-col items-center"
  data-testid="app"
/>
`;

exports[`<AppLayout /> snapshots renders correctly without CMS: header background 1`] = `
<header
  class="w-full px-6 py-4 mobileLandscape:py-6"
/>
`;

exports[`<AppLayout /> snapshots renders correctly without CMS: header logo 1`] = `
<img
  alt="Mozilla logo"
  class="h-auto w-[140px] mx-0"
  src="moz-logo-bw-rgb.svg"
/>
`;

exports[`<AppLayout /> snapshots renders correctly without CMS: title 1`] = `"Mozilla accounts"`;
